--- a/views/playlist.html
+++ b/views/playlist.html
@@ -31,7 +31,7 @@
             </div>
         </nav>
 
-        <div class="container" style="margin-top: 10%; color: whitesmoke; text-align: center;">
+        <div class="container" style="margin-top: 10%; color:; text-align: center; background-color:rgba(255,255,255,0.8); border-radius:5px;">
             <h1>Play List</h1>
             <table class='table table-bordered' id='table'>
                 <thead>  
