--- a/views/playlist.html
+++ b/views/playlist.html
@@ -2,11 +2,11 @@
 
 <html>
     <head>
-        <title>Play List</title>
+        <title>Playlist</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/statics.css" rel="stylesheet">
+        <link href="css/statistics.css" rel="stylesheet">
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -24,7 +24,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="albums">Albums</a></li>
                         <li class="active"><a href="#">Play List</a></li>
-                        <li><a href="statics" id="statics">Statics</a></li>                        
+                        <li><a href="statistics" id="statistics">statistics</a></li>                        
                         <li><a href="logout">Logout</a></li>
                     </ul>
                 </div>
