--- a/views/albums.html
+++ b/views/albums.html
@@ -23,7 +23,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Albums</a></li>
 			<li><a href="playlist" id="playlist">Play List</a></li>
-                        <li><a href="statics" id="statics">Statics</a></li>   
+                        <li><a href="statistics" id="statistics">statistics</a></li>   
                         <li><a href="logout">Logout</a></li>                     
                     </ul>
                 </div>
@@ -56,12 +56,7 @@
             <div class="col-lg-offset-1 col-lg-8">
                 <div class="row eachrow">
                     <div class="col-lg-3">                    
-                        <div class="panel panel-info">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" href="#collapse1" id="collapse">Justin Timberlake</a>
-                                </h4>
-                            </div>
+                                    <a data-toggle="collapse" href="#collapse1" id="collapse"><button class="btn btn-primary">Justin Timberlake</button></a>
                             <div id="collapse1" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <img src="songs/justin_timberlake/justin_timberlake.jpg" alt="Album1" /> 
@@ -72,15 +67,9 @@
                                     </ul>
                                 </div>                            
                             </div>
-                        </div>     
                     </div>
                     <div class="col-lg-3">
-                        <div class="panel panel-info">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" href="#collapse2">Lingaa</a>
-                                </h4>
-                            </div>
+                            <a data-toggle="collapse" href="#collapse2"><button class="btn btn-primary">Lingaa</button></a>
                             <div id="collapse2" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <img src="songs/Lingaa/Lingaa.jpg" alt="Album1">
@@ -98,15 +87,9 @@
                                     </ul>
                                 </div>                            
                             </div>
-                        </div>
                     </div>
                     <div class="col-lg-3">
-                        <div class="panel panel-info">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" href="#collapse3" class="">Barfi</a>
-                                </h4>
-                            </div>
+                            <a data-toggle="collapse" href="#collapse3" class=""><button class="btn btn-primary">Barfi</button></a>
                             <div id="collapse3" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <img src="songs/Barfi/Barfi.jpg" alt="Album1">
@@ -132,7 +115,6 @@
                                     </ul>
                                 </div>                            
                             </div>
-                        </div>
                     </div>
                     
                 </div>            
