--- a/views/index.html
+++ b/views/index.html
@@ -23,30 +23,34 @@
                 <div id="navbar" class="navbar-collapse collapse">                    
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="albums" class="btn btn-default btn-lg" role="button">Albums</a></li>
-                        <li><a href="statics" class="btn btn-info btn-lg" role="button">Statics</a></li>                        
+                        <li><a href="statistics" class="btn btn-info btn-lg" role="button">statistics</a></li>                        
                     </ul>
                 </div>
             </div>
         </nav>  
-        <div class="container-fluid info">
+        <div class="container-fluid info footer">
             <div class="well well-lg">
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="col-sm-3">
                             <span class="glyphicon glyphicon-music" aria-hidden="true"></span> 
-                            <h3>Hello</h3>
+                            <h3>Choose your favourite music</h3>
+                            <p>The world is full of music, why should you listen to music that someone else choose?</p>
                         </div>
                         <div class="col-sm-3">
-                            <span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span> 
-                            <h3>Hello start playing</h3>
+                            <span class="glyphicon glyphicon-stats" aria-hidden="true"></span> 
+                            <h3>View stats</h3>
+                            <p>Beautiful graph to display the summary statistics of the music played.</p>
                         </div>
                         <div class="col-sm-3">
-                            <span class="glyphicon glyphicon-headphones" aria-hidden="true"></span> 
-                            <h3>Hello Enjoy while u still can</h3>
+                            <span class="glyphicon glyphicon-book" aria-hidden="true"></span> 
+                            <h3>Explore music powerhouse</h3>
+                            <p>Browse through the variety of music library with unlimited streaming and add-free</p>
                         </div>
                         <div class="col-sm-3">
-                            <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> 
-                            <h3>Burn the fire out</h3>
+                            <span class="glyphicon glyphicon-list" aria-hidden="true"></span> 
+                            <h3>Create your own playlist</h3>
+                            <p>Listen to your favourite songs.</p>
                         </div>
                     </div>
                 </div>
