Changes to solve merge issues

--- a/public/css/albums.css
+++ b/public/css/albums.css
@@ -1,4 +1,6 @@
-
+/**
+ * @author Srikanth Jonnakuti <sjonnakuti2015@my.fit.edu>
+ */
 body{
     background-image: url("../images/bg3.jpg");
     background-size: cover;
