--- a/views/statistics.html
+++ b/views/statistics.html
@@ -1,12 +1,16 @@
+<!--
+  @author Srikanth Jonnakuti <sjonnakuti2015@my.fit.edu>
+  -->
+
 <!DOCTYPE html>
 
 <html>
     <head>
-        <title>Statics</title>
+        <title>statistics</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/statics.css" rel="stylesheet">
+        <link href="css/statistics.css" rel="stylesheet">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
     </head>
     <body>
@@ -25,7 +29,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="albums">Albums</a></li>
 			<li><a href="playlist" id="playlist">Play List</a></li>
-                        <li class="active"><a href="#">Statics</a></li> 
+                        <li class="active"><a href="#">statistics</a></li> 
                         <li><a href="logout">Logout</a></li>                       
                     </ul>
                 </div>
@@ -33,7 +37,7 @@
         </nav>
 
         <div class="container" style="margin-top: 10%; color: whitesmoke;">
-            <h1>Your Current Session Statics</h1>
+            <h1>Your Current Session statistics</h1>
             <br/>
             <div id="bar-count"></div>
         </div>
@@ -42,6 +46,6 @@
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>        
         <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
         <script src="http://cdn.oesmith.co.uk/morris-0.4.1.min.js"></script>
-        <script src="js/statics.js"></script>          
+        <script src="js/statistics.js"></script>          
     </body>
 </html>
