--- a/public/css/statistics.css
+++ b/public/css/statistics.css
@@ -1,4 +1,7 @@
-
+/**
+ * @author Srikanth Jonnakuti <sjonnakuti2015@my.fit.edu>
+ */
+ 
 body{
     background-image: url("../images/bg3.jpg");
     background-size: cover;
