--- a/views/register.html
+++ b/views/register.html
@@ -1,3 +1,8 @@
+
+<!--
+  @author Srikanth Jonnakuti <sjonnakuti2015@my.fit.edu>
+  -->
+
 <!DOCTYPE html>
 
 <html>
@@ -62,9 +67,6 @@
                     <div class="form-group">        
                         <div class="col-sm-offset-3 col-sm-3">
                             <button type="submit" class="btn btn-default btn-block btn-info">Register</button>
-                        </div>
-                        <div class="col-sm-offset-1 col-sm-3">
-                            <button type="button" class="btn btn-default btn-block" id="btnreset">Reset</button>
                         </div>
                     </div>
                 </form>
